--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 .container-background {
-    background-image: url('img/mydbheroimg.png');
+    background-image: url('img/mydbheroimg3.png');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -24,7 +24,65 @@
     line-height: 1.9;
 }
 
-.inner-container {
-    max-width: 600px; /* Adjust this value as needed */
-    margin: auto;
+.custom-box {
+    background-color: white;
+    border-radius: 0 10px 10px 0;
+    padding: 50px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.custom-heading {
+    font-size: 3em; 
+}
+
+.custom-paragraph {
+    font-size: 1.1em; 
+    letter-spacing: 0.05em; 
+    line-height: 1.5; 
+}
+
+.service-img {
+    height: 500px; 
+    width: 500px; 
+    border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+    .custom-box {
+        padding: 40px;
+        margin-bottom: 10px; 
+        width: auto; 
+        max-width: 100%; 
+        border-radius: 0 0 0 0;
+    }
+
+    .service-img {
+        height: 250px; 
+        width: 250px;
+    }
+
+
+}
+
+@media (max-width: 480px) {
+    .custom-box {
+        padding: 20px; 
+    }
+
+    .custom-heading {
+        font-size: 2em; 
+    }
+    
+    .custom-paragraph {
+        font-size: 1em; 
+        letter-spacing: 0.05em; 
+        line-height: 1.5; 
+    }
+    .service-img {
+        height: auto;
+        width: 100%;
+        max-width: 250px;
+    }
+
+}
+
