--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.custom-box-left {
+    background-color: white;
+    border-radius: 10px 0 0 10px;
+    padding: 50px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .custom-heading {
     font-size: 3em; 
 }
@@ -55,6 +62,14 @@
         max-width: 100%; 
         border-radius: 0 0 0 0;
     }
+    .custom-box-left {
+        padding: 40px;
+        margin-bottom: 10px; 
+        width: auto; 
+        max-width: 100%; 
+        border-radius: 0 0 0 0;
+    }
+    
 
     .service-img {
         height: 250px; 
@@ -66,6 +81,10 @@
 
 @media (max-width: 480px) {
     .custom-box {
+        padding: 20px; 
+    }
+
+    .custom-box-left {
         padding: 20px; 
     }
 
