--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
     background-color: white;
     border-radius: 10px 0 0 10px;
     padding: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 .custom-heading {
@@ -53,6 +53,24 @@
     width: 500px; 
     border-radius: 10px;
 }
+
+.custom-shadow {
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1); 
+    border: none;
+    padding: 40px;
+    font-size: 1.1em; 
+    letter-spacing: 0.05em; 
+    line-height: 1.5; 
+}
+
+.custom-card-header {
+    background: none;
+    border: none;
+    padding: 0;
+}
+  
+  
+  
 
 @media (max-width: 768px) {
     .custom-box {
@@ -93,7 +111,7 @@
     }
     
     .custom-paragraph {
-        font-size: 1em; 
+        font-size: .9em; 
         letter-spacing: 0.05em; 
         line-height: 1.5; 
     }
@@ -101,6 +119,7 @@
         height: auto;
         width: 100%;
         max-width: 250px;
+        padding-top: 20px;
     }
 
 }
