--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,9 @@
     background: none;
     border: none;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
   
@@ -94,6 +97,24 @@
         width: 250px;
     }
 
+    .custom-shadow {
+        box-shadow: 0 0 25px rgba(0, 0, 0, 0.1); 
+        border: none;
+        padding: 10px;
+        font-size: .9em; 
+        letter-spacing: 0.05em; 
+        line-height: 1.5; 
+    }
+    
+    .custom-card-header {
+        background: none;
+        border: none;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 
 }
 
@@ -111,7 +132,7 @@
     }
     
     .custom-paragraph {
-        font-size: .9em; 
+        font-size: 1em; 
         letter-spacing: 0.05em; 
         line-height: 1.5; 
     }
