--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,13 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-
-
   }
+.container-background-usar {
+background-image: url('img/usar/usarhero.png');
+background-size: cover;
+background-position: center center;
+background-repeat: no-repeat;
+}
 
 
 .custom-header {
@@ -51,6 +55,17 @@
 .service-img {
     height: 500px; 
     width: 500px; 
+    border-radius: 10px;
+}
+
+.service-img-utah {
+    height: 400px; 
+    width: 300px; 
+    border-radius: 10px;
+}
+.service-img-customer {
+    height: 500px; 
+    width: 700px; 
     border-radius: 10px;
 }
 
@@ -92,7 +107,7 @@
     }
     
 
-    .service-img {
+    .service-img .service-img-customer .service-img-utah {
         height: 250px; 
         width: 250px;
     }
@@ -136,7 +151,7 @@
         letter-spacing: 0.05em; 
         line-height: 1.5; 
     }
-    .service-img {
+    .service-img .service-img-customer .service-img-utah{
         height: auto;
         width: 100%;
         max-width: 250px;
